# rpipe

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  down.sh  go.mod  go.sum  test.sh  up.sh
.github/: dependabot.yml
.github/workflows/: docker-image.yml  rpipe.yml  test.yml
ci/: parallel.jobs
cmd/checker/: main.go
cmd/rpipe/: main.go
cmd/rpiped/: main.go
src/consts/: mod.rs
