[package]
name = "rpipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["multipart"] }
futures = "0.3"
log = "0.4.26"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.15.1", features = ["v4"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
simple_logger = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.139"
