[package]
name = "rpipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
futures = "0.3"
log = "0.4.27"
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.17.0", features = ["v4"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
simple_logger = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.140"
